--- a/style.css
+++ b/style.css
@@ -70,3 +70,13 @@ body {
 .botao:first-child {
     border-radius: 40px 40px 0 0;
 }
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+    }
+    
+    .abas-textos{
+        background-color: var(--texto-fundo);
+    }
+    
