--- a/style.css
+++ b/style.css
@@ -80,3 +80,8 @@ body {
         background-color: var(--texto-fundo);
     }
     
+    .contador{
+        font-size: 20px;
+        text-align: center;
+    }
+    
